Fix for missing filter button on iphone

--- a/front-gateway/src/components/Search/style/filter.scss
+++ b/front-gateway/src/components/Search/style/filter.scss
@@ -161,4 +161,143 @@
 // }
 
 // nouislider overrides
+.cost-slider {
+  .noUi-connect {
+    background-color: $brand-primary;
+  }
 
+  .noUi-value-large {
+    font-size: 15px;
+
+    &::before {
+      color: $gray-light;
+      content: "₪";
+      font-size: 12px;
+    }
+
+    &:last-child::after {
+      color: $brand-success;
+      content: "+";
+    }
+  }
+}
+
+.roomsnum-slider {
+  .noUi-connect {
+    background-color: lighten($brand-primary, 20%);
+  }
+
+  .noUi-value-large {
+    font-size: 16px;
+
+    &:last-child::after {
+      color: $brand-success;
+      content: "+";
+    }
+  }
+}
+
+.size-slider {
+  .noUi-connect {
+    background-color: lighten($brand-primary, 40%);
+  }
+
+  .noUi-value-large {
+    font-size: 12px;
+
+    &:last-child {
+      font-size: 16px;
+
+      &::after {
+        color: $brand-success;
+        content: "+";
+      }
+    }
+
+    &:nth-child(2)::after {
+      color: $gray-light;
+      font-size: 12px;
+    }
+  }
+}
+
+.noUi-target * {
+  direction: ltr;
+}
+
+.noUi-marker {
+  width: 1px !important;
+}
+
+.noUi-handle {
+  background-color: $brand-white !important;
+  border: 1px solid lighten($gray-light, 30%) !important;
+  border-radius: 50% !important;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1) !important;
+  cursor: pointer !important;
+  height: 19.6px !important;
+  left: -10px !important;
+  top: -9px !important;
+  width: 19.6px !important;
+
+  &:hover {
+    cursor: hand !important;
+  }
+
+  &::before,
+  &::after {
+    display: none !important;
+  }
+}
+
+.noUi-connect {
+  height: 4px;
+  width: auto;
+}
+
+.noUi-origin.noUi-background {
+  background-color: $brand-white;
+  box-shadow: inset 0 1px 1px #F0F0F0, 0 3px 6px -5px #BBB;
+  height: 4px;
+  right: 0;
+  width: auto;
+}
+
+.noUi-value-sub {
+  font-size: 12px;
+}
+
+.noUi-value-large {
+  color: $brand-primary;
+  padding-top: 5px;
+}
+
+.cost-slider,
+.roomsnum-slider,
+.size-slider {
+  > div {
+    height: 4px;
+    margin-bottom: 80px;
+  }
+
+  * {
+    /*CSS transitions*/
+    -o-transition-property: none !important;
+    -moz-transition-property: none !important;
+    -ms-transition-property: none !important;
+    -webkit-transition-property: none !important;
+    transition-property: none !important;
+    /*CSS transforms*/
+    -o-transform: none !important;
+    -moz-transform: none !important;
+    -ms-transform: none !important;
+    -webkit-transform: none !important;
+    transform: none !important;
+    /*CSS animations*/
+    -webkit-animation: none !important;
+    -moz-animation: none !important;
+    -o-animation: none !important;
+    -ms-animation: none !important;
+    animation: none !important;
+  }
+}
